--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ plugins {
 }
 apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
 
+sourceSets.main.output.classesDir = file("build/inplaceWebapp/WEB-INF/classes")
+sourceSets.main.output.resourcesDir = file("build/inplaceWebapp/WEB-INF/classes")
+
 dependencies {
     // Use the latest Groovy version for building this library
     //compile 'org.codehaus.groovy:groovy-all:2.4.14'
@@ -22,6 +25,9 @@ dependencies {
     compile 'com.sun.faces:jsf-api:2.2.18'
     compile 'com.sun.faces:jsf-impl:2.2.18'
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+
+    compile 'org.jboss.weld.servlet:weld-servlet-core:3.1.0.Final'
+    providedCompile 'org.eclipse.jetty:jetty-servlet:9.4.15.v20190215'
 
     // Use the awesome Spock testing and specification framework
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
