--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,8 @@
     <servlet-name>faces-servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
+
+  <session-config>
+      <session-timeout>1</session-timeout>
+  </session-config>
 </web-app>
